--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,5 +6,16 @@
     </head>
 
     <body>
+        <footer class="container-fluid">
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-10 text-center last-node">
+                    <span>&copy; 2017 - <a class="me fadein" href="https://github.com/MaitreManuel" target="_blank" rel="noopener noreferrer">Trystan Eveno</a></span>
+                </div>
+                <div class="col-1 text-right last-node">
+                    <span class="qs"><i class="icon-question"></i> <span class="text-center pop above">Besoin d'aide ?</span></span>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
