footer (bee number, 'send bee' button, popover help && many others things

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,17 +3,23 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <title></title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     </head>
 
     <body>
         <footer class="container-fluid">
             <div class="row">
-                <div class="col-1"></div>
-                <div class="col-10 text-center last-node">
-                    <span>&copy; 2017 - <a class="me fadein" href="https://github.com/MaitreManuel" target="_blank" rel="noopener noreferrer">Trystan Eveno</a></span>
+                <div class="col-4 text-left">
+                    <div class="compteur">
+                        <p id="number"></p>
+                        <p class="bee pulse">🐝</p>
+                    </div>
                 </div>
-                <div class="col-1 text-right last-node">
-                    <span class="qs"><i class="icon-question"></i> <span class="text-center pop above">Besoin d'aide ?</span></span>
+                <div class="col-4 text-center">
+                    <a href="javascript:void(0);">Send bee</a>
+                </div>
+                <div class="col-4 text-right">
+                    <p class="about"><span class="qs">Help <span class="text-center pop">Need help ?</span></span></p>
                 </div>
             </div>
         </footer>
