fixed rebase conflict

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,25 +3,30 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <title>🐝 Bee Alive</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     </head>
 
     <body>
-        <footer class="container-fluid">
-            <div class="row">
-                <div class="col-4 text-left">
-                    <div class="compteur">
-                        <p id="number"></p>
-                        <p class="bee pulse">🐝</p>
-                    </div>
+        <div class="ui">
+            <div class="fg-1 my-1 my-md-0">
+                <div class="counter">
+                    <p id="number"></p>
+                    <p class="bee pulse">🐝</p>
                 </div>
-                <div class="col-4 text-center">
-                    <a href="javascript:void(0);">Send bee</a>
-                </div>
-                <div class="col-4 text-right">
-                    <p class="about"><span class="qs">Help <span class="text-center pop">Need help ?</span></span></p>
-                </div>
+
             </div>
-        </footer>
+            <div class="fg-2 my-1 my-md-0 text-center">
+                <a class="" href="javascript:void(0);">Send bee</a>
+            </div>
+
+            <div class="fg-1 my-1 my-md-0 text-center">
+                <p class="about">
+                    <span class="qs">
+                        Help
+                        <span class="text-center pop">Need help ?</span>
+                    </span>
+                </p>
+            </div>
+        </div>
+
     </body>
 </html>
