--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,6 +6,34 @@
     </head>
 
     <body>
+        <div class="loadingWrapper" data-flag="loadingScreen">
+            <div class="loading text-center">
+                <div>
+                    <div class="bee-icon">🐝</div>
+                    <div>Loading ...</div>
+                </div>
+                <div class="audio">
+                    <p>For an optimal user experience, please turn on your speakers or use headphones</p>
+                   <div class="icons-wrapper">
+                        <div class="fg-1">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="48" viewBox="0 0 24 24" width="48">
+                                <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
+                                />
+                                <path d="M0 0h24v24H0z" fill="none" />
+                            </svg>
+                        </div>
+                        <div class="fg-1">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="48" viewBox="0 0 24 24" width="48">
+                                <path d="M0 0h24v24H0z" fill="none" opacity=".1" />
+                                <path d="M12 1c-4.97 0-9 4.03-9 9v7c0 1.66 1.34 3 3 3h3v-8H5v-2c0-3.87 3.13-7 7-7s7 3.13 7 7v2h-4v8h3c1.66 0 3-1.34 3-3v-7c0-4.97-4.03-9-9-9z"
+                                />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="ui">
             <div class="fg-1 my-1 my-md-0">
                 <div class="counter">
