--- a/src/client/index.html
+++ b/src/client/index.html
@@ -36,14 +36,26 @@
 
         <div class="ui">
             <div class="mode-wrapper">
-                <label for="modeSpectator">
-                    <input type="radio" name="mode" id="modeSpectator" data-flag="modeToggler" value="spectator" checked/>
-                    Spectator
-                </label>
-                <label for="modeWorker">
-                    <input type="radio" name="mode" id="modeWorker" value="worker" data-flag="modeToggler" />
-                    Worker
-                </label>
+                <svg class="filter" version="1.1">
+                    <defs>
+                        <filter id="gooeyness">
+                            <feGaussianBlur in="SourceGraphic" stdDeviation="8" result="blur" />
+                            <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 20 -10" result="gooey" />
+                            <feComposite in="SourceGraphic" in2="gooey" operator="atop" />
+                        </filter>
+                    </defs>
+                </svg>
+                <div class="radios-boxes">
+                    <div class="radios">
+                        <input type="radio" name="mode" id="modeSpectator" class="radio" data-flag="modeToggler" value="spectator" checked/>
+                        <input type="radio" name="mode" id="modeWorker" class="radio" value="worker" data-flag="modeToggler" />
+                        <div class="ball pos1"></div>
+                    </div>
+                    <div class="labels">
+                        <label for="radio1" class="label">Spectator</label>
+                        <label for="radio2" class="label">Worker</label>
+                    </div>
+                </div>
             </div>
             <div class="fg-1 my-1 my-md-0">
 
