--- a/src/client/index.html
+++ b/src/client/index.html
@@ -47,8 +47,8 @@
                 </svg>
                 <div class="radios-boxes">
                     <div class="radios">
-                        <input type="radio" name="mode" id="modeSpectator" class="radio" data-flag="modeToggler" value="spectator" checked/>
-                        <input type="radio" name="mode" id="modeWorker" class="radio" value="worker" data-flag="modeToggler" />
+                        <input type="radio" name="mode" id="modeSpectator" class="radio" data-flag="modeToggler" value="spectator" />
+                        <input type="radio" name="mode" id="modeWorker" class="radio" value="worker" data-flag="modeToggler" checked />
                         <div class="ball pos1"></div>
                     </div>
                     <div class="labels">
