added sound to notification

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -12,6 +12,8 @@
                     <div class="bee-icon">🐝</div>
                     <div>Loading ...</div>
                 </div>
+                <h1>Bee Alive</h1>
+                <h2>A pamphlet to save bees</h2>
                 <div class="audio">
                     <p>For an optimal user experience, please turn on your speakers or use headphones</p>
                    <div class="icons-wrapper">
