--- a/src/client/index.html
+++ b/src/client/index.html
@@ -67,7 +67,7 @@
                 </div>
 
             </div>
-            <div class="fg-2 my-1 my-md-0 text-center inject-wrapper" data-flag="injectInput">
+            <div class="fg-2 my-1 my-md-0 text-lg-center inject-wrapper" data-flag="injectInput">
                 <a id="send-bee" href="javascript:void(0);">Send bee</a>
                 <label class="range-wrapper" data-inject="rangeWrapper">
                     <input type="range" min="0" max="25" step="1" list="tickmarks" data-flag="beeRange" />
